ingress/demo-myapp-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-clusterip-service
  namespace: demo-ingress
spec:
  selector:
    app: demo-myapp
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
