ingress/demo-myapp-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
  namespace: demo-ingress
spec:
  selector:
    app: demo-myapp
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
