ingress/demo-myapp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:  
  name: my-nodeport-service
  namespace: demo-ingress
spec:
  selector:    
    app: demo-myapp
  type: NodePort
  ports:  
  - name: http
    port: 3001
    targetPort: 80
    nodePort: 30036
    protocol: TCP
