ingress/demo-myapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-myapp
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - demo-myapp.example.com
      secretName: tls-secret
  rules:
    - host: demo-myapp.example.com
      http:
        paths:
          - path: /
            backend:
              # This service is expose as cluster ip and can't able to access outside
              # the cluster. Only ingress controller can access this service
              serviceName: myapp-service
              servicePort: 8081
